add GetLocationList
