# src/main/java/com/inhouse/application/resource/location/GetLocationListInputDto.java
@@ -1,0 +1,6 @@
+
+package com.inhouse.application.resource.location;
+
+public class GetLocationListInputDto {
+
+}
