# src/main/java/com/inhouse/application/resource/location/GetLocationListOutputDto.java
@@ -1,0 +1,15 @@
+
+package com.inhouse.application.resource.location;
+
+import java.util.List;
+
+import com.inhouse.domain.object.Location;
+
+import lombok.Data;
+
+@Data
+public class GetLocationListOutputDto {
+    
+    private List<Location> locationList;
+
+}
